--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
   <script>window.assert = chai.assert</script>
   <script src="test/test.init.js"></script>
   <script src="test/test.connection.js"></script>
+  <script src="test/test.repl.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.run();
