More tests, more docs and split `_handleMessage`

--- a/test.html
+++ b/test.html
@@ -17,6 +17,7 @@
   <script src="test/test.init.js"></script>
   <script src="test/test.connection.js"></script>
   <script src="test/test.repl.js"></script>
+  <script src="test/test.eventhandler.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.run();
