--- a/examples/filetransfer.html
+++ b/examples/filetransfer.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <script type="text/javascript" src="FileSaver.js"></script>
-        <script type="text/javascript" src="webrepl.js"></script>
+        <script type="text/javascript" src="../FileSaver.js"></script>
+        <script type="text/javascript" src="../webrepl.js"></script>
     </head>
     <body>
         <h1>WebREPL Client</h1>
