--- a/examples/interactive-prompt.html
+++ b/examples/interactive-prompt.html
@@ -3,13 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Interactive prompt</title>
-        <!-- <script src="https://unpkg.com/@webcomponents/custom-elements"></script> -->
-        <script type="text/javascript" src="components/custom-elements.min.js"></script>
-        <script type="text/javascript" src="components/webrepl-connection.js"></script>
-        <script type="text/javascript" src="components/webrepl-terminal.js"></script>
-        <script type="text/javascript" src="components/webrepl-command.js"></script>
-        <script type="text/javascript" src="../webrepl.js"></script>
-        <script type="text/javascript" src="connect.js"></script>
     </head>
     <body>
         <h1>Interactive prompt</h1>
@@ -17,24 +10,44 @@
         <webrepl-terminal></webrepl-terminal>
         <webrepl-command command="print('hello world!')"></webrepl-command>
 
-        <script type="text/javascript">
+        <script type="module">
+            // import 'https://unpkg.com/@webcomponents/custom-elements'
+            import './custom-elements.min.js'
+            import './components/webrepl-connection.js'
+            import './components/webrepl-terminal.js'
+            import './components/webrepl-command.js'
+            import { WebREPL } from '../webrepl.js'
             let repl
 
             window.onload = () => {
                 let connectionForm = document.querySelector('webrepl-connection')
                 let commandForm = document.querySelector('webrepl-command')
                 let terminal = document.querySelector('webrepl-terminal')
+                let submitCommad = (e) => {
+                    repl.exec(e.detail)
+                }
                 connectionForm.addEventListener('connect', (e) => {
-                    connect(e.detail.ip, e.detail.password)
-                        .then((connectedRepl) => {
-                            repl = connectedRepl
-                            repl.onMessage = terminal.output.bind(terminal)
-                            connectionForm.setAttribute('connected', true)
-                            commandForm.setAttribute('connected', true)
-                            commandForm.addEventListener('submit-command', (e) => {
-                                repl.exec(e.detail)
-                            })
-                        })
+                    repl = new WebREPL({
+                        ip: e.detail.ip,
+                        password: e.detail.password,
+                        autoConnect: true,
+                        autoAuth: true
+                    })
+                    repl.on('connected', () => {
+                        connectionForm.setAttribute('connected', true)
+                        commandForm.setAttribute('connected', true)
+                        commandForm.addEventListener('submit-command', submitCommad)
+                    })
+                    repl.on('output', terminal.output.bind(terminal))
+                    repl.on('error', (err) => {
+                        console.log('error')
+                        console.error(err)
+                    })
+                    repl.on('disconnected', (err) => {
+                        connectionForm.setAttribute('connected', false)
+                        commandForm.setAttribute('connected', false)
+                        commandForm.removeEventListener('submit-command', submitCommad)
+                    })
                 })
             }
         </script>
