--- a/examples/file-manager.html
+++ b/examples/file-manager.html
@@ -3,108 +3,145 @@
     <head>
         <meta charset="utf-8">
         <title>File transfer</title>
-        <!-- <script src="https://unpkg.com/@webcomponents/custom-elements"></script> -->
-        <script type="text/javascript" src="components/custom-elements.min.js"></script>
-        <script type="text/javascript" src="components/webrepl-connection.js"></script>
-        <script type="text/javascript" src="components/webrepl-file-manager.js"></script>
         <script type="text/javascript" src="../FileSaver.js"></script>
-        <script type="text/javascript" src="../webrepl.js"></script>
-        <script type="text/javascript" src="connect.js"></script>
     </head>
     <body>
         <h1>File Manager</h1>
-        <webrepl-connection ip="192.168.1.176" password="123456"></webrepl-connection>
+        <webrepl-connection></webrepl-connection>
         <webrepl-file-manager></webrepl-file-manager>
 
-        <script type="text/javascript">
+        <script type="module">
+            // import 'https://unpkg.com/@webcomponents/custom-elements'
+            import './custom-elements.min.js'
+            import './components/webrepl-connection.js'
+            import './components/webrepl-file-manager.js'
+            import { WebREPL } from '../webrepl.js'
+            let repl
             window.onload = () => {
-                let repl
-                let state =  'disconnected'
-                let buffer = ''
                 let connectionForm = document.querySelector('webrepl-connection')
                 let fileManager = document.querySelector('webrepl-file-manager')
 
-                const handleMessage = (msg) => {
-                    switch(state) {
-                        case 'connected':
-                            break;
-                        case 'listing':
-                            buffer += msg
-                            if (buffer.indexOf('ENDPRINT') != -1) {
-                                displayFiles()
-                            }
-                            break
-                        case 'removing':
-                            buffer += msg
-                            if (buffer.indexOf(`Type "help()" for more information.\r\n>>> `) != -1) {
-                                listFiles()
-                            }
-                            break
-                        case 'sending':
-                            if(msg instanceof ArrayBuffer) {
-                                listFiles()
-                            }
-                            break
-                        case 'loading':
-                        default:
-                            break
+                let parseResponse = (response) => {
+                    let rawStart = 'raw REPL; CTRL-B to exit\r\n>OK'
+                    let rawEnd = String.fromCharCode(4) // CTRL-D
+                    let rawStartIndex = response.indexOf(rawStart) + rawStart.length
+                    let rawEndIndex = rawStartIndex + response.substring(rawStartIndex).indexOf(rawEnd)
+                    return response.substring(rawStartIndex, rawEndIndex)
+                }
+                let listFiles = () => {
+                    let buffer = ''
+                    let code = 'import os;print(os.listdir(), end="")'
+                    let getResponse = (response) => {
+                        buffer += response
                     }
+                    repl.on('output', getResponse)
+                    return repl.execFromString(code)
+                        .then(() => {
+                            repl.removeListener('output', getResponse)
+                            return Promise.resolve(parseResponse(buffer))
+                        })
                 }
-                const listFiles = () => {
-                    buffer = ''
-                    state = 'listing'
-                    let code = 'import os;print("STARTPRINT",os.listdir(),"ENDPRINT")'
-                    repl.execFromString(code)
+                let listAndLoad = () => {
+                    return listFiles()
+                        .then((response) => {
+                            fileManager.loadFiles(
+                                JSON.parse(
+                                    response.trim().replace(/'/g, '"')
+                                )
+                            )
+                            return Promise.resolve(response)
+                        })
                 }
-                const sendFile = (e) => {
-                    buffer = ''
-                    state = 'sending'
-                    let reader = new FileReader()
-                    reader.onload = (f) => {
-                        repl.sendFile(e.detail.name, f.target.result)
-                    }
-                    reader.readAsArrayBuffer(e.detail)
+                let sendFile = (file) => {
+                    return new Promise((resolve, reject) => {
+                        let reader = new FileReader()
+                        reader.onload = () => {
+                            let putFileData = new Uint8Array(reader.result)
+                            repl.sendFile(file.name, putFileData)
+                                .then(resolve)
+                                .catch(reject)
+                        }
+                        reader.onerror = reject
+                        reader.readAsArrayBuffer(file)
+                    })
                 }
-                const onSent = (filename, filedata) => {
-                    listFiles()
+                let getFile = (filename) => {
+                    return repl.loadFile(filename)
+                        .then((data) => {
+                            return Promise.resolve(
+                                new Blob(
+                                    [data],
+                                    { type: "application/octet-stream" }
+                                )
+                            )
+                        })
                 }
-                const removeFile = (e) => {
-                    buffer = ''
-                    state = 'removing'
-                    repl.removeFile(e.detail)
-                }
-                const getFile = (e) => {
-                    buffer = ''
-                    state = 'loading'
-                    repl.loadFile(e.detail)
-                }
-                const displayFiles = () => {
-                    let out = buffer.substring(
-                        buffer.indexOf('STARTPRINT')+11,
-                        buffer.indexOf('ENDPRINT')
-                    )
-                    out = out.replace(/'/g, `"`)
-                    try {
-                        let files = JSON.parse(out)
-                        fileManager.loadFiles(files)
-                    } catch(e) { console.log(out, e) }
+                let removeFile = (filename) => {
+                    let code = `import os;os.remove('${filename}')`
+                    return repl.execFromString(code)
                 }
 
                 connectionForm.addEventListener('connect', (e) => {
-                    connect(e.detail.ip, e.detail.password)
-                        .then((connectedRepl) => {
-                            state = 'connected'
-                            repl = connectedRepl
-                            repl.onMessage = handleMessage.bind(this)
-                            repl.onSent = onSent
-                            repl.saveAs = saveAs
-                            connectionForm.setAttribute('connected', true)
-                            fileManager.setAttribute('connected', true)
-                            fileManager.addEventListener('list-files', listFiles)
-                            fileManager.addEventListener('send-file', sendFile)
-                            fileManager.addEventListener('remove-file', removeFile)
-                            fileManager.addEventListener('get-file', getFile)
+                    repl = new WebREPL({
+                        ip: e.detail.ip,
+                        password: e.detail.password,
+                        autoConnect: true,
+                        autoAuth: true
+                    })
+                    repl.on('error', (err) => {
+                        console.error(err)
+                    })
+                    repl.on('authenticated', () => {
+                        connectionForm.setAttribute('connected', true)
+                        fileManager.setAttribute('connected', true)
+
+                        // List files and load into `webrepl-file-manager`
+                        fileManager.addEventListener('list-files', () => {
+                            console.log('Listing files')
+                            listAndLoad().catch((err) => {
+                                console.log('Failed listing files')
+                                console.error(err)
+                            })
                         })
+                        // Send file
+                        fileManager.addEventListener('send-file', (e) => {
+                            console.log(`Sending ${e.detail.name} ...`)
+                            sendFile(e.detail)
+                                .then(() => {
+                                    console.log('Sent')
+                                    return listAndLoad()
+                                })
+                                .catch((err) => {
+                                    console.log('Failed sending file')
+                                    console.error(err)
+                                })
+                        })
+                        // Remove file
+                        fileManager.addEventListener('remove-file', (e) => {
+                            console.log(`Removing file ${e.detail} ...`)
+                            removeFile(e.detail)
+                                .then(() => {
+                                    console.log('Removed')
+                                    return listAndLoad()
+                                })
+                                .catch((err) => {
+                                    console.log('Failed removing file')
+                                    console.error(err)
+                                })
+                        })
+                        // Get file
+                        fileManager.addEventListener('get-file', (e) => {
+                            console.log(`Getting ${e.detail} ...`)
+                            getFile(e.detail)
+                                .then((blob) => {
+                                    saveAs(blob, e.detail)
+                                })
+                                .catch((err) => {
+                                    console.log('Failed getting file')
+                                    console.error(err)
+                                })
+                        })
+                    })
                 })
             }
         </script>
