--- a/examples/file-manager.html
+++ b/examples/file-manager.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>File transfer</title>
+        <title>File Manager</title>
         <script type="text/javascript" src="../FileSaver.js"></script>
     </head>
     <body>
