--- a/examples/file-manager.html
+++ b/examples/file-manager.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>File Manager</title>
-        <script type="text/javascript" src="../FileSaver.js"></script>
+        <script type="text/javascript" src="./FileSaver.js"></script>
     </head>
     <body>
         <h1>File Manager</h1>
