Add custom elements polyfill as dependency

--- a/examples/text-editor.html
+++ b/examples/text-editor.html
@@ -11,7 +11,7 @@
 
         <script type="module">
             // import 'https://unpkg.com/@webcomponents/custom-elements'
-            import './custom-elements.min.js'
+            import '../node_modules/custom-elements/dist/CustomElements.min.js'
             import './components/webrepl-connection.js'
             import './components/webrepl-editor.js'
             import { WebREPL } from '../webrepl.js'
