--- a/examples/file-manager.html
+++ b/examples/file-manager.html
@@ -12,7 +12,7 @@
 
         <script type="module">
             // import 'https://unpkg.com/@webcomponents/custom-elements'
-            import './custom-elements.min.js'
+            import '../node_modules/custom-elements/dist/CustomElements.min.js'
             import './components/webrepl-connection.js'
             import './components/webrepl-file-manager.js'
             import { WebREPL } from '../webrepl.js'
